--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-linkedin">linkedin</a></li>
-								<li><a href="#" class="icon brands fa-github">github</a></li>
+								<li><a href="https://www.linkedin.com/in/henok-teketay-47a5b911a/" class="icon brands fa-linkedin">linkedin</a></li>
+								<li><a href="https://hennyd.github.io/" class="icon brands fa-github">github</a></li>
 								
 							</ul>
 						</footer>
