--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="https://media.licdn.com/dms/image/C4E03AQFHeMUIx4LjRQ/profile-displayphoto-shrink_200_200/0?e=1576713600&v=beta&t=IETF8Zjxqe8vNgfBev3OTY1wffhm5qyEObN7Uom5aGg" alt="" /></span>
 							<h1>Henok Teketay</h1>
 							<p>cyber security Engineer</p>
 						</header>
